test/extra/negative/slice1Bit.net
INPUT a
OUTPUT r
VAR a, r
IN
r = SLICE 0 0 a
